--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^4.3.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
