--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^6.3.4",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.1",
     "next": "12.1.5",
